--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "JG"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "HUSH"
+  location         : "PUSAN"
   email            :
   links:
     - label: "Email"
