--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ko-KR"
+locale                   : "en-US"
 title                    : "a better tomorrow"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
