--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "a better tomorrow"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "JANGI"
+name                     : "JANGI.NET"
 description              : "New Test"
 url                      : https://zipnumsa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
