--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "a better tomorrow"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "JANGI.NET"
+name                     : "JANGI"
 description              : "New Test"
 url                      : https://zipnumsa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
