--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 #remote_theme           : "mmistakes/minimal-mistakes"
+#remote_theme           : "samarsault/plainwhite-jekyll"
 remote_theme           : "TaylanTatli/Moon"
 minimal_mistakes_skin    : "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
